[package]
edition = "2021"
name = "zive-teplice-backend-rust"
version = "0.1.0"

[dependencies]
diesel = {version = "2.2.6", features = ["chrono"]}
diesel-async = {version = "0.5.2", features = ["postgres"]}
rocket = {version = "0.5.1", features = ["json"]}
serde = "1.0.217"
serde_json = "1.0.134"
tokio = "1.42.0"
