[package]
edition = "2021"
name = "zive-teplice-backend-rust"
version = "0.1.0"

[dependencies]
diesel = {version = "2.1", features = ["chrono"]}
diesel-async = {version = "0.4.1", features = ["postgres"]}
rocket = {version = "0.5.1", features = ["json"]}
rocket_db_pools = {version = "0.2.0", features = ["diesel_postgres"]}
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.217"
serde_json = "1.0.134"
tokio = "1.42.0"
rocket-multipart-form-data = "0.10.7"
image = "0.25.5"
aws-sdk-s3 = "1.67.0"

[dev-dependencies]
reqwest = {version = "0.12.12", features = ["json", "blocking"]}
